# goto

./: Cargo.toml  README.md  goto.zsh  install.sh
src/: cli.rs  config.rs  db.rs  embedding.rs  main.rs  matcher.rs  scanner.rs  semantic.rs
