[package]
name = "goto"
version = "0.1.0"
edition = "2021"
description = "Quickly navigate to projects with semantic search"
authors = ["sderosiaux"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Vector search (sqlite-vec extension)
sqlite-vec = "0.1"
zerocopy = { version = "0.7", features = ["derive"] }

# Embeddings (ONNX-based, offline)
fastembed = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# File system
walkdir = "2"
directories = "5"
dirs = "5"

# Regex (lightweight)
regex-lite = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
strip = true
